--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,7 +183,7 @@ hr {
 .profile-img {
     display: block;
     margin: 0 auto;
-    max-width: 750px;
+    max-width: 90%;
     height: auto;
     border-radius: 10%;
     margin-bottom: 20px;
@@ -241,16 +241,24 @@ a:hover {
 
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
-
+    max-width: 1000px;
     border-radius: 10px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     background-color: transparent;
-    width: 119vh;
+    width: 100%;
     height: 40vh;
     border: 1px solid #f1f1f1;
     perspective: 1000px;
     /* Remove this if you don't want the 3D effect */
+    
+    margin: 0 auto;
+    /* Add additional styles for responsiveness */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
 
 /* This container is needed to position the front and back side */
 .flip-card-inner {
@@ -274,6 +282,8 @@ a:hover {
     position: absolute;
     width: 100%;
     height: 100%;
+    
+    
     -webkit-backface-visibility: hidden;
     /* Safari */
     backface-visibility: hidden;
@@ -307,18 +317,26 @@ a:hover {
 }
 
 /* Container for skill bars */
-.container {
-    width: 100%; /* Full width */
-    background-color: #ddd; /* Grey background */
-  }
+.container-for-skills {
+    width: 100%;
+    /* Full width */
+    background-color: #ddd;
+    /* Grey background */
+    margin-bottom: 10px;
+}
+
+.div-skills {
+    margin: 10px;
+}
   
   .skills {
     text-align: right; /* Right-align text */
     padding-top: 10px; /* Add top padding */
     padding-bottom: 10px; /* Add bottom padding */
     color: white; /* White text color */
+    
   }
-  
+
   .csharp {width: 70%; background-color: #DC5756;} 
   .unity {width: 75%; background-color: #DC5756;} 
   .augment {width: 65%; background-color: #DC5756;}
