--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ nav {
     padding: 10px;
     text-align: center;
     width: 100%;
-  
+    z-index: 999;
     /* Pay special attention here! */
     position: fixed;
     top: 0px;
@@ -79,12 +79,17 @@ section.type-a {
 section.type-b {
     /*No Background -- Intro Speal About myself */
     margin-top: 3vh;
-    height: 30vh;
+    /* height: 30vh; */
     /* set the height of the header to 20% of the viewport height */
     background-color: rgba(0, 0, 0, 0);
 }
 
-section.type-c {
+section.flip-card-section{
+    
+    margin: 0 auto;
+}
+
+section.about-me {
     max-width: 1000px;
     padding: 2em 20px;
     background-color: var(--background);
@@ -246,7 +251,9 @@ a:hover {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     background-color: transparent;
     width: 100%;
-    height: 40vh;
+    
+    height: 300px;
+    
     border: 1px solid #f1f1f1;
     perspective: 1000px;
     /* Remove this if you don't want the 3D effect */
